<resources>
    <string name="app_name">FireBaseProyectoDionisio</string>
    <string name="iniciar">LOGIN</string>
    <string name="contra">contraseña</string>
    <string name="user">example@email.com</string>
    <string name="iniSesion">Iniciar sesión</string>
    <string name="registro">Registrarse</string>
    <string name="cerrar">Cerrar sesión</string>
    <string name="recuperar">Recuperar contraseña</string>
    <string name="msg_restablecer">Se ha enviado un correo a su email para poder restablecer la clave</string>
    <string name="borrar_user">Borrar usuario</string>
    <string name="borrar_completado">Usuario borrado exitosamente</string>
    <string name="modificar">Modificar datos user</string>
    <string name="usuario">Usuario</string>
    <string name="olvidar">Olvidaste tu contraseña</string>
    <string name="contratv">Contraseña</string>
    <string name="registrar">¿No tienes una cuenta? Registrate</string>
    <string name="contraRegistro">Introduzca contraseña</string>
    <string name="contraRegistroConfirmar">Confirmar contraseña</string>
    <string name="confirmarRegistro">Confirmar registro</string>
    <string name="contraFallida">Las contraseñas no son iguales, vuelva a introducirlas</string>
    <string name="contra_corta">Contraseña demasiado corta, vuelva a introducir una de nuevo</string>
    <string name="contra_olvidada">Restablecer contraseña</string>
    <string name="texto_olvidada">Si ha olvidado la contraseña, por favor, introduzca su correo electrónico y se le enviará un email para reestablecerla</string>
    <string name="reestablecer">Reestablecer Contraseña</string>
    <string name="introduzca_mail">Porfavor, introduzca su email para poder enviar el correo</string>
    <string name="email_enviado">Se ha enviado el correo para resetear su clave</string>
    <string name="bienvenido">Bienvenido, </string>
    <string name="correo">Correo </string>
    <string name="nacionalidad">Nacionalidad</string>
    <string name="edad">Edad</string>
    <string name="modificar_title">Modificar datos usuario</string>
    <string name="cambiar_user">Introduzca su usuario deseado</string>
    <string name="cambiar_nacionalidad">Introduzca su nacionalidad</string>
    <string name="cambiar_edad">Introduzca su edad</string>
    <string name="btn_cambiar_texto">Realizar cambios</string>
    <string name="cambio_correcto">Cambio en los datos realizados de forma correcta</string>
</resources>